--- a/docs/create/from-source/index-from-source.mdx
+++ b/docs/create/from-source/index-from-source.mdx
@@ -7,7 +7,7 @@ slug: /create/from-source/
 
 
 
-## Step 1: Download, extract and compile Redis
+### Step 1: Download, extract and compile Redis
  
 ```
 wget http://download.redis.io/redis-stable.tar.gz
@@ -45,5 +45,8 @@ redis> get foo
 
 Please note: By default, Redis has 0-15 indexes for databases, you can change that number databases NUMBER in redis.conf.
 
+### Next Step
 
-
+- [Connect to Redis database using RedisInsight](/explore/redisinsight)
+- [Develop with Java and Redis](/develop/java)
+- [Develop with Python and Redis](/develop/python)
