--- a/docs/develop/node/index-node.mdx
+++ b/docs/develop/node/index-node.mdx
@@ -27,14 +27,14 @@ For your first steps with Node.js and Redis, this article will show how to use t
 
 ### Getting Started with ioredis
 
-1. Install the ioredis library using `npm` (or `yarn`)
+### Step 1. Install the ioredis library using `npm` (or `yarn`)
 
     ```bash
     npm install ioredis
     ```
 
 
-3. Write your application code
+### Step 2. Write your application code
 
     ```javascript
     const Redis = require("ioredis");
@@ -64,14 +64,14 @@ Find more information about Redis & io-redis connections in the "[Redis Connect]
 
 ### Getting Started with node-redis
 
-1. Install the Redis library using `npm` (or `yarn`)
+### Step 1. Install the Redis library using `npm` (or `yarn`)
 
     ```bash
     npm install redis
     ```
 
 
-3. Write your application code
+### Step 2. Write your application code
 
     ```javascript
     const redis = require("redis");
@@ -111,16 +111,7 @@ Find more information about Redis & node-redis connections in the "[Redis Connec
 
 ---
 
-## Guides
-
-<RedisCard 
-    title="How to Use SSL/TLS With Redis Enterprise" 
-    page="/guide/security/how-to-use-ssl-tls-with-redis-enterprise/"
-    />
-
----
-
-## More developer resources
+### More developer resources
 
 <div class="row">
 
@@ -154,7 +145,7 @@ This project allow you to push notifications in a Vue application from a Redis `
 
 ---
 
-## Redis University
+### Redis University
 
 ### [Redis for JavaScript Developers](https://university.redislabs.com/courses/ru102js/)
 
