--- a/docs/develop/python/index-python.mdx
+++ b/docs/develop/python/index-python.mdx
@@ -12,7 +12,7 @@ import RedisCard from '@site/src/theme/RedisCard';
 
 Find tutorials, examples and technical articles that will help you to develop with Redis and Python.
 
-## Getting Started
+### Getting Started
 
 The Python community has built many client libraries that you can find [here](https://redis.io/clients#python).
 For your first steps with Python and Redis, this article will show how to use the recommended library: [redis-py](https://github.com/andymccurdy/redis-py).
@@ -28,14 +28,14 @@ For your first steps with Python and Redis, this article will show how to use th
 
 ### Getting Started with redis-py
 
-1. Install the Redis library using `pip`
+### Step 1. Install the Redis library using `pip`
 
     ```bash
     pip3 install redis
     ```
 
 
-2. Write your application code
+### Step 2. Write your application code
 
     ```python
     import redis
@@ -59,18 +59,9 @@ Find more information about Redis & Redis connections in the "[Redis Connect](ht
   </TabItem>
 </Tabs>
   
----
 
-## Guides
 
-<RedisCard 
-    title="How to Use SSL/TLS With Redis Enterprise" 
-    page="/guide/security/how-to-use-ssl-tls-with-redis-enterprise/"
-    />
-
----
-
-## More developer resources
+### More developer resources
 
 <div class="row">
 
@@ -97,7 +88,7 @@ Application that shows how to do rate limiting using various Redis datastructure
 
   ---
 
-## Redis University
+### Redis University
 
 ### [Redis for Python Developers](https://university.redislabs.com/courses/ru102py/)
 
