--- a/docs/explore/redisinsight/index-redisinsight.mdx
+++ b/docs/explore/redisinsight/index-redisinsight.mdx
@@ -32,7 +32,9 @@ A full-featured desktop GUI client, RedisInsight is available for Windows, macOS
   ]}>
   <TabItem value="MacOS">
 
+## Using MacOS 
 
+### Step 1. Download RedisInsight
 
 To use RedisInsight on a local Mac, you can download from the RedisInsight page on the RedisLabs website:
 
@@ -44,7 +46,7 @@ Fill out the rest of the form and click “Download.” Please note that the pac
 
 redisinsight-platform-version
 
-## Running RedisInsight
+### Step 2. Install RedisInsight
 
 Click on the RedisInsight executable and install it in your system.
 
@@ -55,18 +57,24 @@ Head over to your web browser and go to http://localhost:8001
 
 Congratulations! You have successfully installed RedisInsight and are now ready to inspect your Redis data, monitor database health, and perform runtime server configuration with this browser-based management interface for your Redis deployment.
 
+### Step 3. Connect to Redis database
 
 ![My Image](redisinsight3.png)
 
 Assuming that you already have Redis database up and running, select "Connect to a Redis database"
 ![My Image](redisinsight4.png)
 
+### Step 4. Add Redis Database
+
 Enter the requested details, including Name, Host (endpoint), Port, and Password in the form, as shown below. You can skip username for now. Then click “ADD REDIS DATABASE”:
+
+
+
 
 ![My Image](redisinsight5.png)
 
 
-### How to use RedisInsight to run the Redis CLI
+### Step 5. Run the Redis CLI
 
 Finally, although RedisInsight is a great GUI, sometimes you want to work directly in the command-line interface (CLI). To do so, click “CLI” in the  menu on the left side of the RedisInsight UI:
 
@@ -83,6 +91,10 @@ You can see the output displayed at the top of the screen. If it says “OK,” 
 
 <TabItem value="Linux">
 
+## Using Linux
+
+### Step 1. Download RedisInsight
+
 To use RedisInsight on your Linux machine, you can download from the RedisInsight page on the RedisLabs website:
 
 Open [this](https://redislabs.com/redis-enterprise/redis-insight/#insight-form) link to open up a form that allows you to select the operating system of your choice.
@@ -93,7 +105,7 @@ Fill out the rest of the form and click “Download.” Please note that the pac
 
 redisinsight-linux64
 
-### Running RedisInsight
+### Step 2. Install RedisInsight
 
 Open a terminal and navigate to the folder containing the downloaded file.
 
@@ -103,7 +115,7 @@ Make your downloaded file into an executable.
 chmod +x redisinsight-linux64-<version>
 ```
 
-### Start RedisInsight.
+### Step 3. Start RedisInsight.
 
 ```
 ./redisinsight-linux64-version
@@ -116,6 +128,9 @@ Congratulations! You have successfully installed RedisInsight and are now ready 
 
 ![My Image](redisinsight3.png)
 
+### Step 4. Connect to Redis database
+
+
 Assuming that you already have Redis database up and running, select "Connect to a Redis database"
 ![My Image](redisinsight4.png)
 
@@ -124,7 +139,7 @@ Enter the requested details, including Name, Host (endpoint), Port, and Password
 ![My Image](redisinsight5.png)
 
 
-### How to use RedisInsight to run the Redis CLI
+### Step 5. Run the Redis CLI
 
 Finally, although RedisInsight is a great GUI, sometimes you want to work directly in the command-line interface (CLI). To do so, click “CLI” in the  menu on the left side of the RedisInsight UI:
 
@@ -143,13 +158,17 @@ You can see the output displayed at the top of the screen. If it says “OK,” 
 
 <TabItem value="Windows">
 
+## Using Windows
+### Step 1. Download RedisInsight
+
+
 To install RedisInsight on Windows, there is no need to install any .NET framework. RedisInsight should install and run on a fresh Windows system. 
 
 To use RedisInsight on your Windows machine, you can download from the RedisInsight page on the RedisLabs website:
 
 Open [this](https://redislabs.com/redis-enterprise/redis-insight/#insight-form) link to open up a form that allows you to select the operating system of your choice.
 
-## Downloading RedisInsight
+### Step 2.  Install RedisInsight
 
 ![My Image](redisinsight-windows.png)
 
@@ -158,11 +177,13 @@ Fill out the rest of the form and click “Download.” Please note that the pac
 redisinsight-win-msi
 
 
-### Run the installer.
+### Step 3. Accessing RedisInsight
 
 After the web server starts, open http://127.0.0.1:8001 and add a Redis database connection.
 
 Congratulations! You have successfully installed RedisInsight and are now ready to inspect your Redis data, monitor database health, and perform runtime server configuration with this browser-based management interface for your Redis deployment.
+
+### Step 4. Connect to a Redis database
 
 
 ![My Image](redisinsight3.png)
@@ -175,7 +196,7 @@ Enter the requested details, including Name, Host (endpoint), Port, and Password
 ![My Image](redisinsight5.png)
 
 
-### How to use RedisInsight to run the Redis CLI
+### Step 5. Run the Redis CLI
 
 Finally, although RedisInsight is a great GUI, sometimes you want to work directly in the command-line interface (CLI). To do so, click “CLI” in the  menu on the left side of the RedisInsight UI:
 
@@ -192,13 +213,14 @@ You can see the output displayed at the top of the screen. If it says “OK,” 
 
 <TabItem value="Docker">
 
-
+## Using Docker
+### Step 1. Install Docker
 
 The first step is to install docker for your operating system. Run the docker version command in a terminal window to make sure that docker is installed correctly.
 
 Note - On Windows and Mac, install docker version 18.03 or higher. You can run docker version to find out your docker version.
 
-## Run RedisInsight Docker image 
+### Step 2.  Run RedisInsight Docker image 
 
 Next, run the RedisInsight container. The easiest way is to run the following command:
 
@@ -206,7 +228,10 @@ Next, run the RedisInsight container. The easiest way is to run the following co
 docker run -v redisinsight:/db -p 8001:8001 redislabs/redisinsight:latest
 ```
 
-and then point your browser to http://localhost:8001.
+### Step 3. Accessing RedisInsight
+
+Next, point your browser to http://localhost:8001.
+
 
 RedisInsight also provides a health check endpoint at http://localhost:8001/healthcheck/ to monitor the health of the running container.
 
@@ -240,6 +265,8 @@ Head over to your web browser and go to http://localhost:8001
 Congratulations! You have successfully installed RedisInsight and are now ready to inspect your Redis data, monitor database health, and perform runtime server configuration with this browser-based management interface for your Redis deployment.
 
 
+### Step 4. Connect to a Redis database
+
 ![My Image](redisinsight3.png)
 
 Assuming that you already have Redis database up and running, select "Connect to a Redis database"
@@ -250,7 +277,7 @@ Enter the requested details, including Name, Host (endpoint), Port, and Password
 ![My Image](redisinsight5.png)
 
 
-### How to use RedisInsight to run the Redis CLI
+### Step 5. Run the Redis CLI
 
 Finally, although RedisInsight is a great GUI, sometimes you want to work directly in the command-line interface (CLI). To do so, click “CLI” in the  menu on the left side of the RedisInsight UI:
 
@@ -268,11 +295,12 @@ You can see the output displayed at the top of the screen. If it says “OK,” 
 
 <TabItem value="Kubernetes">
 
-## Create the RedisInsight deployment and service 
+## Using Kubernetes
+### Step 1. Create the RedisInsight deployment and service 
 
 Below is an annotated YAML file that will create a RedisInsight deployment and a service in a k8s cluster.
 
-### Create a new file redisinsight.yaml with the content below
+### Step 2. Create a new file redisinsight.yaml with the content below
 
 ```
 # RedisInsight service with name 'redisinsight-service'
@@ -327,13 +355,13 @@ spec:
         emptyDir: {} # node-ephemeral volume https://kubernetes.io/docs/concepts/storage/volumes/#emptydir
 ```
 
-### Create the RedisInsight deployment and service
+### Step 3. Create the RedisInsight deployment and service
 
 ```
 kubectl apply -f redisinsight.yaml
 ```
 
-### Accessing RedisInsight
+### Step 4. Accessing RedisInsight
 
 Once the deployment and service are successfully applied and complete, you shoould be able to access RedisInsight. 
 This can be accomplished by listing the using the External IP address of the service we created to reach redisinsight.
@@ -357,7 +385,7 @@ $ minikube list
 |-------------|----------------------|--------------|---------------------------------------------|
 ```
 
-### Create the RedisInsight deployment without a service. 
+### Step 5. Create the RedisInsight deployment without a service. 
 
 Below is an annotated YAML file that will create a RedisInsight deployment in a K8s cluster.
 
@@ -411,7 +439,7 @@ spec:
         emptyDir: {} # node-ephemeral volume https://kubernetes.io/docs/concepts/storage/volumes/#emptydir
 ```
 
-### Create the RedisInsight deployment
+### Step 6. Create the RedisInsight deployment
 
 ```
 kubectl apply -f redisinsight.yaml
@@ -442,7 +470,7 @@ Enter the requested details, including Name, Host (endpoint), Port, and Password
 ![My Image](redisinsight5.png)
 
 
-### How to use RedisInsight to run the Redis CLI
+### Step 7. Run the Redis CLI
 
 Finally, although RedisInsight is a great GUI, sometimes you want to work directly in the command-line interface (CLI). To do so, click “CLI” in the  menu on the left side of the RedisInsight UI:
 
@@ -460,7 +488,7 @@ You can see the output displayed at the top of the screen. If it says “OK,” 
 
 
 
-### Reference
+### Further References
 
 ### RedisInsight Overview (RedisConf'20)
 
