--- a/docs/develop/rust/index-rust.mdx
+++ b/docs/develop/rust/index-rust.mdx
@@ -14,7 +14,7 @@ import RedisCard from '@site/src/theme/RedisCard';
 Find tutorials, examples and technical articles that will help you to develop with Redis and Rust.
 
 
-## Getting Started
+### Getting Started
 
 Rust community has built many client libraries that you can find here. For your first steps with Java and Rust, this article will show how to use a popula library: redis-rs
 The web page “Redis Enterprise and Rust” will help you to get started with Redis Enterprise and Rust in a much easier manner.
@@ -31,26 +31,26 @@ It exposes a general purpose interface to Redis and also provides specific helpe
 
 ### Getting Started with Redis-rs
 
-1. Install Rust
+### Step 1. Install Rust
 
        ```bash
         curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh
        ```
 
-2. Configure your current shell:
+### Step 2. Configure your current shell:
  
        ```bash
         source $HOME/.cargo/env
        ```
 
-3. Verify Rust compiler:
+### Step 3. Verify Rust compiler:
  
        ```bash
         rustc --version
         rustc 1.49.0
        ```
 
-4. Creating Cargo.toml with Redis dependency:
+### Step 4. Creating Cargo.toml with Redis dependency:
  
        ```bash
         [dependencies]
@@ -58,20 +58,20 @@ It exposes a general purpose interface to Redis and also provides specific helpe
        ```
 
 
-5. Clone the repository
+### Step 5. Clone the repository
 
        ```bash
         git clone https://github.com/redis-developer/redis-rust-getting-started
        ```
 
  
-6. Run the application
+### Step 6. Run the application
    
      ```bash
       cargo run
      ```
 
-## Further Reference:
+### Further References
 
 - [Redis Enterprise and Rust](https://redislabs.com/lp/redis-enterprise-rust/)
 - [Getting Started with Redis & Rust](https://github.com/redis-developer/redis-rust-getting-started)
