--- a/docs/explore/riot/index-riot.mdx
+++ b/docs/explore/riot/index-riot.mdx
@@ -27,6 +27,7 @@ Redis Input/Output Tools (RIOT) is a set of import/export command line utilities
   ]}>
   <TabItem value="RIOT Redis">
 
+## Using RIOT Redis
 
 Most database migration tools available today are offline in nature. Migrating data from AWS ElastiCache to Redis Enterprise Cloud for example means backing up your Elasticache data to an AWS S3 bucket and importing it into Redis Enterprise Cloud using its UI.This implies some downtime and might result in data loss.
 Other available techniques include creating point-in-time snapshots of the source Redis server & applying the changes to the destination servers to keep both servers in sync.
@@ -34,14 +35,14 @@ It might sound like a good approach but can be challenging when you have to main
 
 RIOT Redis is a migration tool that allows for seamless live replication between two Redis databases.
 
-### 1. Getting Started
+### Step 1. Getting Started
 
 
 Download the [latest release](https://github.com/redis-developer/riot/releases/latest) and unzip the archive.
 
 Launch the `bin/riot-redis` script and follow the usage information provided.
 
-### 2. Build and Run
+### Step 2. Build and Run
 
 ```
 git clone https://github.com/redis-developer/riot.git
@@ -49,7 +50,7 @@ cd riot/riot-redis
 ./riot-redis
 ```
 
-### 3. Install via Homebrew (macOS) 
+### Step 3. Install via Homebrew (macOS) 
 
 ```
 brew install jruaux/tap/riot-redis`
@@ -95,7 +96,7 @@ Redis connection options are the same as redis-cli:
 ```
 Redis URI syntax is described here.
 
-### 4. Example
+### Step 4. Example
 
 Here is an example of a live replication from a source Redis running on localhost and port 6379, to a target Redis running on localhost and port 6380:
 
@@ -103,7 +104,7 @@ Here is an example of a live replication from a source Redis running on localhos
 ❯ riot-redis -h source -p 6379 replicate --idle-timeout 500 -h target -p 6380 --live
 ```
 
-### 5. Verification
+### Step 5. Verification
 
 Once replication is complete RIOT Redis will perform a verification step to compare values and TTLs between source and target databases. The output looks like this:
 
@@ -122,7 +123,7 @@ OK:1000 V:0 >:0 <:0 T:0
 - T: # keys with TTL difference greater than tolerance
 
 
-### 6. Architecture
+### Step 6. Architecture
 
 RIOT Redis implements client-side replication using a producer/consumer approach:
 
@@ -144,16 +145,17 @@ Note: The live replication mechanism does not guarantee data consistency. Redis 
 
 <TabItem value="RIOT DB">
 
+## Using RIOT DB
 
 RIOT DB lets you import/export data from relational databases.
 
-### 1. Getting Started
+### Step 1. Getting Started
 
 Download the [latest release](https://github.com/redis-developer/riot/releases/latest) and unzip the archive.
 
 Launch the bin/riot-db script and follow the usage information provided.
 
-### 2. Build and Run
+### Step 2. Build and Run
 
 ```
 ❯ git clone https://github.com/redis-developer/riot.git
@@ -161,13 +163,13 @@ Launch the bin/riot-db script and follow the usage information provided.
 ❯ ./riot-db
 ```
 
-### 3. Install via Homebrew (macOS)
+### Step 3. Install via Homebrew (macOS)
 
 ```
 brew install jruaux/tap/riot-db
 ```
 
-### 4. Usage
+### Step 4. Usage
 
 ```
 ❯ riot-db
@@ -203,7 +205,7 @@ Redis connection options are the same as redis-cli:
   -m, --pool=<int>          Max pool connections (default: 8)
 
 ```
-### 5. Drivers
+### Step 5. Drivers
 
 RIOT DB includes drivers for the most common RDBMSs:
 
@@ -250,7 +252,7 @@ For non-included databases you must install the corresponding JDBC driver under 
 Windows: bin{app}.bat → set CLASSPATH=%APP_HOME%\lib\myjdbc.jar;%APP_HOME%\lib\…
 ```
 
-### 6. Import
+### Step 6. Import
 
 Use the import command to import the result set of a SQL statement.
 
@@ -280,7 +282,7 @@ You can specify one or many Redis commands as targets of the import:
 ❯ riot-db import .. hset --keyspace blah --keys id expire --keyspace blah --keys id sadd --keyspace myset --members id
 ```
 
-### 7. Export
+### Step 7. Export
 
 #### Export to PostgreSQL
 
@@ -319,4 +321,7 @@ This will produce Redis strings that look like this:
 </TabItem>
 </Tabs>
 
+### Further References
 
+- [Architecture of RIOT](https://developer.redislabs.com/riot/#_architecture)
+- [Overview of RIOT](https://developer.redislabs.com/riot/)
