--- a/docs/create/docker/index-docker.mdx
+++ b/docs/create/docker/index-docker.mdx
@@ -161,5 +161,5 @@ If persistence is enabled, data is stored in the VOLUME /data, which can be used
 
 ### Next Step
 
-- [Connect to Redis database using RedisInsight](/explore/redisinsight)
-- [Connect to Redis database using Redis datasource for Grafana](/explore/redisdatasource)
+- [Connect to Redis database using RedisInsight](/explore/redisinsight/)
+- [Connect to Redis database using Redis datasource for Grafana](/explore/redisdatasource/)
