--- a/docs/create/cloud/rediscloud/index-recloud.mdx
+++ b/docs/create/cloud/rediscloud/index-recloud.mdx
@@ -17,34 +17,23 @@ Next, you will have to add  Redis Enterprise Cloud Essentials subscription. In t
 ![My Image](images/subscription.png)
 
 ### Step 3.  Select cloud provider
-For the cloud provider, select Amazon AWS
+For the cloud provider, select Microsoft Azure and Free Plan
 
-![My Image](images/aws.png)
 
-### Step 4. Selection region
-For the region where you want to use the subscription, select ap-south-1. Please note that it’s currently available only in the AWS/Mumbai
 
-![My Image](images/region.png)
-
-### Step 5. Select free cloud plan
-In the Redis Enterprise Cloud service levels, select the Redis Cloud Essentials 30MB/1 Database level
-
-![My Image](images/plan.png)
+![My Image](images/recloud1.png)
 
 ### Step 6. Create database
 Click Create. After you create a subscription, you can create a database:
 
-![My Image](images/createdatabase.png)
+![My Image](images/recloud2.png)
 
-### Step 7. Add database details
-Enter a name for the database of your choice
 
-![My Image](images/choosemodule.png)
 
 ### Step 8. Launch database
 Click "Activate" and wait for few seconds till it gets activated. Once fully activated, you will see the database endpoints as shown below:
 
-![My Image](images/activate.png)
+![My Image](images/recloud3.png)
 
 
 ### Next Step
