--- a/docs/create/cloud/rediscloud/index-recloud.mdx
+++ b/docs/create/cloud/rediscloud/index-recloud.mdx
@@ -12,12 +12,12 @@ Redis Enterprise Cloud is a fully managed cloud service by Redis Labs.Built for 
 Create your free <a href="https://redislabs.com/try-free/" target="_blank" rel="noopener">Redis Enterprise Cloud account</a>. Once you click on “Get Started”, you will receive an email with a link to activate your account and complete your signup process.
 
 ### Step 2. Add subscription
-Next, you will have to add  Redis Enterprise Cloud Essentials subscription. In the Redis Enterprise Cloud menu, click Subscriptions. At the bottom of the page, click the “+” sign.
+Next, you will have to add  Redis Enterprise Cloud subscription. In the Redis Enterprise Cloud menu, click Subscriptions. At the bottom of the page, click the “+” sign.
 
 ![My Image](images/subscription.png)
 
 ### Step 3.  Select cloud provider
-For the cloud provider, select Microsoft Azure and Free Plan
+For the cloud provider, select Microsoft Azure and Fixed Size Plan(for demo purpose)
 
 
 
