--- a/docs/howtos/shoppingcart/index-shoppingcart.mdx
+++ b/docs/howtos/shoppingcart/index-shoppingcart.mdx
@@ -9,9 +9,7 @@ import TabItem from '@theme/TabItem';
 import useBaseUrl from '@docusaurus/useBaseUrl';
 import RedisCard from '@site/src/theme/RedisCard';
 
-It’s hard to imagine an online store without a shopping cart. Almost every online store must have the shopping cart functionality to be able to sell products to customers. In order to build a scalable eCommerce platform, you need a powerful framework and a simple storage system. At times, a lot of developers focus on improving the frontend performance of an eCommerce to rectify these things. The real bottleneck, however, remains the slow backend load time. A slow backend load time can have a serious impact on your search engine rankings. A good rule of thumb is that back end load time should take no more than 20% of your total load time. A good backend load time to aim for is 200ms or less. 
-
-In this tutorial, you will see how to build a shopping cart application using Node.js, Vue.js, Express and Redis.
+It’s hard to imagine an online store without a shopping cart. Almost every online store must have the shopping cart functionality to be able to sell products to customers. In order to build a scalable eCommerce platform, all you need is a powerful framework and a simple storage system. Most of developers focus on improving the frontend performance of an eCommerce to rectify these things. However, the real bottleneck remains the slow backend load time. A slow backend load time can have a serious impact on your search engine rankings. In this tutorial, you will see how to build a shopping cart application using Node.js, Vue.js, Express and Redis.
 
 
 ![My Image](shoppingcart.png)
