Fixed the headings for Create

--- a/docs/create/docker/index-docker.mdx
+++ b/docs/create/docker/index-docker.mdx
@@ -1,6 +1,6 @@
 ---
 id: index-docker
-title: Run Redis using Docker
+title: Create Database using Docker
 sidebar_label: Docker
 slug: /create/docker/
 ---
