--- a/docs/create/from-source/index-from-source.mdx
+++ b/docs/create/from-source/index-from-source.mdx
@@ -1,6 +1,6 @@
 ---
 id: index-from-source
-title: Install and Create Redis database from Source Code
+title: Create Database from Source Code
 sidebar_label: Redis from Source
 slug: /create/from-source/
 ---
