--- a/docs/create/kubernetes/index-kubernetes.mdx
+++ b/docs/create/kubernetes/index-kubernetes.mdx
@@ -1,6 +1,6 @@
 ---
 id: index-kubernetes
-title: Run Redis Enterprise using GKE 
+title: Create Database using Google Kubernetes Engine 
 sidebar_label: Kubernetes
 slug: /create/kubernetes/
 ---
@@ -145,7 +145,10 @@ echo bXVLeHRpblY= | base64 -d
 ```
 
 
-This command will display the password which you can use to access Redis Enterprise UI over the browser.
+### Step 13. Creating a database
+
+Open  https://localhost:8443 on the browser to see the Redis Enterprise Software web console. Click on "Setup", add your preferred DNS and admin credentials and proceed further to create your first Redis database using Redis Enterprise.
+
 
 ## Next Step
 
