Formatting changes to the site

--- a/docs/howtos/ratelimiting/index-ratelimiting.mdx
+++ b/docs/howtos/ratelimiting/index-ratelimiting.mdx
@@ -143,7 +143,7 @@ docker-compose up -d --build
 
 ### Step 4. Setting up an environmental variable 
 
-Open directory server (cd server): copy .env.example to create .env (copy .env.example .env or cp .env.example .env). 
+Open directory server (cd server): copy .env.example to create .env  
 And provide the values for environment variables (if needed)
 
 
