Formatted the link to RE Cloud

--- a/docs/modules/redisbloom/index-redisbloom.mdx
+++ b/docs/modules/redisbloom/index-redisbloom.mdx
@@ -18,7 +18,7 @@ The RedisBloom module provides four data types:
 
 ### Step 1. Register and subscribe
 
-Follow [this](/create/cloud/rediscloud) link to register and subscribe to Redis Enterprise Cloud
+Follow [this link to register](/create/cloud/rediscloud) and subscribe to Redis Enterprise Cloud
 
 ![Redisbloom](redisbloom1.png)
 
