--- a/docs/modules/redisearch/index-redisearch.mdx
+++ b/docs/modules/redisearch/index-redisearch.mdx
@@ -13,7 +13,7 @@ RediSearch also supports auto-completion with fuzzy prefix matching, and atomic 
 
 ### Step 1. Register and subscribe
 
-Follow [this](/create/cloud/rediscloud) link to register and subscribe to Redis Enterprise Cloud
+Follow [this link to register](/create/cloud/rediscloud) and subscribe to Redis Enterprise Cloud
 
 ![Redisearch](redisearch3.png)
 
