--- a/docs/modules/redisgraph/index-redisgraph.mdx
+++ b/docs/modules/redisgraph/index-redisgraph.mdx
@@ -12,7 +12,7 @@ RedisGraph is a Redis module that enables enterprises to process any kind of con
 
 ### Step 1. Register and subscribe
 
-Follow [this](/create/cloud/rediscloud) link to register and subscribe to Redis Enterprise Cloud
+Follow [this link to register](/create/cloud/rediscloud) and subscribe to Redis Enterprise Cloud
 
 ![RedisGraph](redisgraph1.png)
 
