--- a/docs/modules/redisjson/index-redisjson.mdx
+++ b/docs/modules/redisjson/index-redisjson.mdx
@@ -10,7 +10,7 @@ The RedisJSON module provides in-memory manipulation of JSON documents at high v
 
 ### Step 1. Register and subscribe
 
-Follow [this](/create/cloud/rediscloud) link to register and subscribe to Redis Enterprise Cloud
+Follow [this link to register](/create/cloud/rediscloud) and subscribe to Redis Enterprise Cloud
 
 ![RedisJSON](redisjson3.png)
 
