--- a/docs/modules/redistimeseries/index-redistimeseries.mdx
+++ b/docs/modules/redistimeseries/index-redistimeseries.mdx
@@ -10,7 +10,7 @@ RedisTimeseries is a Redis module developed by Redis Labs to enhance your experi
 
 ### Step 1. Register and subscribe
 
-Follow [this](/create/cloud/rediscloud) link to register and subscribe to Redis Enterprise Cloud
+Follow [this link to register](/create/cloud/rediscloud) and subscribe to Redis Enterprise Cloud
 
 ![Redistimeseries](redistimeseries.png)
 
