Structured the repo

--- a/docs/create/docker/index-docker.mdx
+++ b/docs/create/docker/index-docker.mdx
@@ -1,7 +1,7 @@
 ---
 id: index-docker
-title: Create Database using Docker
-sidebar_label: Docker
+title: Create Redis database on Docker
+sidebar_label: Redis on Docker
 slug: /create/docker/
 ---
 import Tabs from '@theme/Tabs';
