--- a/docs/create/from-source/index-from-source.mdx
+++ b/docs/create/from-source/index-from-source.mdx
@@ -1,11 +1,9 @@
 ---
 id: index-from-source
-title: Create Database from Source Code
+title: Create Redis database from Source
 sidebar_label: Redis from Source
 slug: /create/from-source/
 ---
-
-
 
 ### Step 1: Download, extract and compile Redis
  
