--- a/docs/create/kubernetes/index-kubernetes.mdx
+++ b/docs/create/kubernetes/index-kubernetes.mdx
@@ -1,7 +1,7 @@
 ---
 id: index-kubernetes
-title: Create Database using Google Kubernetes Engine 
-sidebar_label: Kubernetes
+title: Create Redis database on Google Kubernetes Engine
+sidebar_label: Redis on Kubernetes
 slug: /create/kubernetes/
 ---
 import Tabs from '@theme/Tabs';
