--- a/docs/create/aws/index-aws.mdx
+++ b/docs/create/aws/index-aws.mdx
@@ -1,6 +1,6 @@
 ---
 id: index-aws
-title: Create Redis database on AWS Cloud
+title: Create Redis database on AWS 
 sidebar_label: Redis on AWS
 slug: /create/aws
 ---
