--- a/docs/create/rediscloud/index-recloud.mdx
+++ b/docs/create/rediscloud/index-recloud.mdx
@@ -1,6 +1,6 @@
 ---
 id: index-rediscloud
-title: Create Database using Redis Enterprise Cloud
+title: Create database using Redis Enterprise Cloud
 sidebar_label: Redis Enterprise Cloud
 slug: /create/rediscloud
 ---
