--- a/docs/create/azure/index-azure.mdx
+++ b/docs/create/azure/index-azure.mdx
@@ -1,6 +1,6 @@
 ---
 id: index-azure
-title: Create Redis databsse on Azure Cache
+title: Create Redis database on Azure Cache
 sidebar_label: Redis on Azure Cache
 slug: /create/azure
 ---
