--- a/docs/create/aws/index-aws.mdx
+++ b/docs/create/aws/index-aws.mdx
@@ -11,7 +11,7 @@ Follow the below steps to setup Redis Enterprise Cloud hosted over AWS Cloud:
 
 ### Step 1. Getting Started
 
-Follow this [link](https://redislabs.com/try-free/) to register. 
+Follow this [link to register](https://redislabs.com/try-free/) 
 
 ![AWS Cloud](tryfree.png)
 
