Added a dedicated page for HowTos

--- a/docs/howtos/index-howtos.mdx
+++ b/docs/howtos/index-howtos.mdx
@@ -17,7 +17,7 @@ Find the best Graphical User Interfaces to interact with your data and, manage a
     <RedisCard 
         title="Rate Limiting" 
         description="Implementing Rate Limting" 
-        page="howtos/ratelimiting"
+        page="/howtos/ratelimiting/"
         />
  </div>
  
@@ -25,7 +25,7 @@ Find the best Graphical User Interfaces to interact with your data and, manage a
     <RedisCard 
         title="Shopping Cart" 
         description="Implementing Shopping Cart using Redis " 
-        page="howtos/shoppingcart"
+        page="/howtos/shoppingcart/"
         />
  </div>
 
@@ -38,7 +38,7 @@ Find the best Graphical User Interfaces to interact with your data and, manage a
     <RedisCard 
         title="Fraud Detection" 
         description="Building Fraud Detection using Redis" 
-        page="howtos/fraudmitigation"
+        page="/howtos/fraudmitigation"
         />
  </div>
 
@@ -47,7 +47,7 @@ Find the best Graphical User Interfaces to interact with your data and, manage a
     <RedisCard 
         title="Leaderboard" 
         description="Building a Real-Time Leaderboard using Reds" 
-        page="howtos/leaderboard"
+        page="/leaderboard"
         />
  </div>
 
