--- a/docs/howtos/index-howtos.mdx
+++ b/docs/howtos/index-howtos.mdx
@@ -7,9 +7,8 @@ slug: /howtos
 
 import RedisCard from '@site/src/theme/RedisCard';
 
-Redis Marketplace is a catalog with dozens of ready-to-use app listings from Redis Labs. Now it is easy to build, test and  deploy software that runs using Redis.
+This page holds a catalog with dozens of ready-to-use app listings from Redis Labs. Now it is easy to build, test and  deploy software that runs using Redis.
 
-Find the best Graphical User Interfaces to interact with your data and, manage and monitor your Redis Database.
 
 <div class="row">
 
@@ -28,17 +27,15 @@ Find the best Graphical User Interfaces to interact with your data and, manage a
         page="/howtos/shoppingcart/"
         />
  </div>
-
 </div>
-
 
 <div class="row">
 
  <div class="col">
     <RedisCard 
-        title="Fraud Detection" 
-        description="Building Fraud Detection using Redis" 
-        page="/howtos/fraudmitigation"
+        title="Movies Database" 
+        description="How to search and list Movies database using Redis" 
+        page="/howtos/moviesdatabase/getting-started"
         />
  </div>
 
@@ -47,9 +44,28 @@ Find the best Graphical User Interfaces to interact with your data and, manage a
     <RedisCard 
         title="Leaderboard" 
         description="Building a Real-Time Leaderboard using Reds" 
-        page="/leaderboard"
+        page="/howtos/leaderboard"
         />
  </div>
 
+</div>
+<div class="row">
+
+ <div class="col">
+    <RedisCard
+        title="Fraud Detection"
+        description="Building Fraud Detection using Redis"
+        page="/howtos/frauddetection"
+        />
+ </div>
+
+
+ <div class="col">
+    <RedisCard
+        title="Caching"
+        description="How to cache REST API responses Using Redis & NodeJS"
+        page="/howtos/caching"
+        />
+ </div>
 </div>
 
